# MarioAI_CMA_TWEANN

./: .gitignore  README.md  build.sbt
src/: CMakeLists.txt  build.xml
src/ch/idsia/benchmark/mario/engine/: Recorder.java
src/ch/idsia/benchmark/tasks/: LearningTask.java  ReplayTask.java
src/ch/idsia/scenarios/: Replay.java
src/ch/idsia/scenarios/champ/: LearningTrack.java
src/de/goost/jcmatweann/: CMATWEANN.java  NeuralNet.java  WrapperTest.java
src/de/goost/mariocmatweann/: CMATWEANNLearningAgent.java
src/main/java/ch/idsia/benchmark/tasks/: LearningTask.java
src/main/java/ch/idsia/scenarios/: Custom.java  Main.java
src/main/java/ch/idsia/scenarios/champ/: LearningTrack.java
src/main/java/ch/idsia/utils/wox/serial/: EncodeBase64.java
src/main/java/de/goost/jcmatweann/: CMATWEANNLearningAgent.java
src/main/java/de/goost/mariocmatweann/: CMATWEANNLearningAgent.java
src/main/java/native/: Makefile  NeuralNet.cpp  cmatweann.cpp  outEr.txt  pointerMagic.h
src/main/java/native/cmatweann/: Makefile  cmat.h
src/main/scala/de/gost/scario/: CMATWEANN.scala  NeuralNetwork.scala
src/native/: CMakeList.txt  CMakeLists.txt  Makefile  NeuralNet.cpp  cmatweann.cpp  de_goost_jcmatweann_CMATWEANN.h  de_goost_jcmatweann_CMATWEANN_GetPointerFailedException.h  de_goost_jcmatweann_NeuralNet.h  jCMATWEANN.cpp  nn.h  pointerMagic.h
src/native/cmatweann/: README  cmat.h  nn.h  prob.h  test.cpp
